# AOS

./: .gitignore  README.md
lab1/: task1  task1.c  task10.c  task11.c  task2  task2.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
lab2/: bash_script.sh  task1.c  task10.c  task11a  task11a.c  task11b  task11b.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
lab3/: task1.c  task10.c  task11.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
lab4/: CMakeLists.txt  task1.c  task10.c  task11.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
lab5/: CMakeLists.txt  task10.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c  tasks1and2.c
lab6/: CMakeLists.txt  math_server.conf
lab6/server/: run.c  server.c  server.h
